@@ -1,7 +1,6 @@
 package com.chat.server.service;
 
 import com.chat.server.entity.Message;
-import com.chat.server.entity.UserSession;
 import com.chat.server.repository.UserSessionRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -10,7 +9,6 @@ import org.springframework.stereotype.Service;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -20,6 +18,17 @@ public class PushNotificationService {
     private final UserSessionRepository userSessionRepository;
     private final FcmService fcmService;
 
+    /**
+     * Уникальные FCM-токены активных сессий пользователя.
+     * Один и тот же токен не должен получать уведомление дважды.
+     */
+    private List<String> distinctTokens(Long userId) {
+        return userSessionRepository.findActiveFcmTokensByUserId(userId).stream()
+                .filter(token -> token != null && !token.isEmpty())
+                .distinct()
+                .toList();
+    }
+
     public void sendMessageNotification(Message message, List<Long> recipientIds) {
         // Отправляем уведомление всем участникам кроме отправителя
         List<Long> targetIds = recipientIds.stream()
@@ -27,37 +36,21 @@ public class PushNotificationService {
                 .toList();
 
         for (Long userId : targetIds) {
-            List<UserSession> sessions = userSessionRepository.findActiveSessionsByUserId(userId);
-
-            for (UserSession session : sessions) {
-                if (session.getFcmToken() != null && !session.getFcmToken().isEmpty()) {
-                    fcmService.sendMessageNotification(
-                            session.getFcmToken(),
-                            message.getSenderId(),
-                            message.getMessageText()
-                    );
-                }
+            for (String token : distinctTokens(userId)) {
+                fcmService.sendMessageNotification(token, message.getSenderId(), message.getMessageText());
             }
         }
     }
 
     public void sendTypingNotification(Long chatId, Long userId, Long recipientId) {
-        List<UserSession> sessions = userSessionRepository.findActiveSessionsByUserId(recipientId);
-
-        for (UserSession session : sessions) {
-            if (session.getFcmToken() != null && !session.getFcmToken().isEmpty()) {
-                fcmService.sendTypingNotification(session.getFcmToken(), chatId, userId);
-            }
+        for (String token : distinctTokens(recipientId)) {
+            fcmService.sendTypingNotification(token, chatId, userId);
         }
     }
 
     public void sendCallNotification(Long chatId, Long callerId, Long recipientId, String callType) {
-        List<UserSession> sessions = userSessionRepository.findActiveSessionsByUserId(recipientId);
-
-        for (UserSession session : sessions) {
-            if (session.getFcmToken() != null && !session.getFcmToken().isEmpty()) {
-                fcmService.sendCallNotification(session.getFcmToken(), chatId, callerId, callType);
-            }
+        for (String token : distinctTokens(recipientId)) {
+            fcmService.sendCallNotification(token, chatId, callerId, callType);
         }
     }
 
@@ -67,44 +60,29 @@ public class PushNotificationService {
                 .toList();
 
         for (Long targetId : targetIds) {
-            List<UserSession> sessions = userSessionRepository.findActiveSessionsByUserId(targetId);
-
-            for (UserSession session : sessions) {
-                if (session.getFcmToken() != null && !session.getFcmToken().isEmpty()) {
-                    fcmService.sendReadReceiptNotification(session.getFcmToken(), chatId, userId, messageId);
-                }
+            for (String token : distinctTokens(targetId)) {
+                fcmService.sendReadReceiptNotification(token, chatId, userId, messageId);
             }
         }
     }
 
     public void sendNewContactNotification(Long userId, String contactName, Long contactId) {
-        List<UserSession> sessions = userSessionRepository.findActiveSessionsByUserId(userId);
-
-        for (UserSession session : sessions) {
-            if (session.getFcmToken() != null && !session.getFcmToken().isEmpty()) {
-                fcmService.sendNewContactNotification(session.getFcmToken(), contactName, contactId);
-            }
+        for (String token : distinctTokens(userId)) {
+            fcmService.sendNewContactNotification(token, contactName, contactId);
         }
     }
 
     public void sendGroupInviteNotification(Long userId, String groupName, Long chatId, String inviterName) {
-        List<UserSession> sessions = userSessionRepository.findActiveSessionsByUserId(userId);
-
-        for (UserSession session : sessions) {
-            if (session.getFcmToken() != null && !session.getFcmToken().isEmpty()) {
-                fcmService.sendGroupInviteNotification(session.getFcmToken(), groupName, chatId, inviterName);
-            }
+        for (String token : distinctTokens(userId)) {
+            fcmService.sendGroupInviteNotification(token, groupName, chatId, inviterName);
         }
     }
 
     public void sendMulticastMessage(List<Long> userIds, String title, String body, Map<String, String> additionalData) {
-        // Собираем все FCM токены пользователей
         List<String> fcmTokens = userIds.stream()
-                .flatMap(userId -> userSessionRepository.findActiveSessionsByUserId(userId).stream())
-                .filter(session -> session.getFcmToken() != null && !session.getFcmToken().isEmpty())
-                .map(UserSession::getFcmToken)
+                .flatMap(userId -> distinctTokens(userId).stream())
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         if (!fcmTokens.isEmpty()) {
             Map<String, String> data = new HashMap<>(additionalData);
@@ -116,12 +94,8 @@ public class PushNotificationService {
 
     public void sendMessageDeletedNotification(Long chatId, Long messageId, List<Long> participantIds) {
         for (Long userId : participantIds) {
-            List<UserSession> sessions = userSessionRepository.findActiveSessionsByUserId(userId);
-
-            for (UserSession session : sessions) {
-                if (session.getFcmToken() != null && !session.getFcmToken().isEmpty()) {
-                    fcmService.sendMessageDeletedNotification(session.getFcmToken(), chatId, messageId);
-                }
+            for (String token : distinctTokens(userId)) {
+                fcmService.sendMessageDeletedNotification(token, chatId, messageId);
             }
         }
     }
